# controller/element_controller.go
@@ -2,10 +2,8 @@ package controller
 
 import (
 	"encoding/json"
-	"io"
 	"net/http"
 
-	"github.com/PandaX185/computer-alchemy-api/dto"
 	"github.com/PandaX185/computer-alchemy-api/service"
 	"github.com/gorilla/mux"
 )
@@ -36,36 +34,12 @@ func GetAllElements(w http.ResponseWriter, r *http.Request) {
 func GetElementByName(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	name := vars["name"]
-	element := service.GetElementByName(name)
+	element, err := service.GetElementByName(name)
+	if err != nil || element == nil {
+		http.Error(w, "Element not found", http.StatusNotFound)
+		return
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(element)
-}
-
-// CombineElements godoc
-// @Summary Combine elements
-// @Description Combines two elements and returns the resulting element
-// @Tags elements
-// @Accept json
-// @Produce json
-// @Param combination body dto.CombinationRequest true "Elements to combine"
-// @Success 200 {array} models.Element
-// @Failure 400 {object} string "Invalid combination"
-// @Router /elements [post]
-func CombineElements(w http.ResponseWriter, r *http.Request) {
-	body, err := io.ReadAll(r.Body)
-	if err != nil {
-		http.Error(w, "Failed to read request body", http.StatusInternalServerError)
-		return
-	}
-	var request dto.CombinationRequest
-	if err := json.Unmarshal(body, &request); err != nil {
-		http.Error(w, "Invalid request body", http.StatusBadRequest)
-		return
-	}
-
-	result := service.CombineElements(request.FirstElement, request.SecondElement)
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(result)
 }
