# docs/swagger.json
@@ -9,28 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/elements": {
-            "get": {
-                "description": "Returns a list of all elements in the game",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "elements"
-                ],
-                "summary": "Get all available elements",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Element"
-                            }
-                        }
-                    }
-                }
-            },
+        "/combinations": {
             "post": {
                 "description": "Combines two elements and returns the resulting element",
                 "consumes": [
@@ -40,7 +19,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "elements"
+                    "combinations"
                 ],
                 "summary": "Combine elements",
                 "parameters": [
@@ -68,6 +47,29 @@
                         "description": "Invalid combination",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/elements": {
+            "get": {
+                "description": "Returns a list of all elements in the game",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "elements"
+                ],
+                "summary": "Get all available elements",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Element"
+                            }
                         }
                     }
                 }
